--- a/www/main.css
+++ b/www/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eeeeec;
+    background-color: #898989;
     padding-top: 0em;
     margin: 0px;
 }
@@ -10,7 +10,7 @@ body {
     margin-right: auto;
     padding: 1em;
     background-color: white;
-    border: 2px solid #555753;
+    border: 1px solid #555753;
     margin-bottom:0px;
     padding-bottom:0px;
 }
@@ -42,7 +42,7 @@ body {
     margin-bottom: 1em;
     text-align: center;
     border-top: none;
-    color: #555753;
+    color: #1C3812;
     font-size: 0.6em;
 }
 
@@ -154,4 +154,13 @@ tt {
   font-family: monospace;
   font-size: inherit;
 }
+
+
+span.image a.image img {
+    text-decoration: none;
+    background-color: #454545;
+    border: 1px solid black;
+}
+
+
 
