www: less space between li items

--- a/www/main.css
+++ b/www/main.css
@@ -309,5 +309,9 @@ table thead th {
     border-bottom: 1px solid #bcbcbc;
 }
 
+.ulist li p {
+    margin-top: 0em;
+    margin-bottom: 0em;
+}
 
 
