--- a/www/main.css
+++ b/www/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #66770A;
+    background-color: #FFD694;
     padding: 10px;
     margin: 0px;
 }
@@ -9,31 +9,14 @@ body {
     margin-right: auto;
     margin-top: 0.5em;
     margin-bottom: 2em;
-    border: 0px solid #555753;
     width: 90%; max-width: 70em;
-    -moz-box-shadow:    0px 0px 5px 5px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.5);
-    box-shadow:         0px 0px 5px 5px rgba(0,0,0,0.5);
 }
 
-#navigationbar .curtab {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-}
-
-#frame , #header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    -moz-border-radius-topleft: 10px;
-    -moz-border-radius-topright: 10px;
+#header, #navigationbar {
+    background-color: #C3FFB2;
 }
 #frame {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    -moz-border-radius-bottomleft: 10px;
-    -moz-border-radius-bottomright: 10px;
+    border: 4px solid #176800;
 }
 
 #frame , #navigationbar .curtab {
@@ -41,18 +24,8 @@ body {
 }
 
 #navigationbar {
-
-    background-color: #232323; /* for non-css3 browsers */
-
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#303030'); /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#303030)); /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #000,  #303030); /* for firefox 3.6+ */
     text-align: center;
     padding-top: 0.2em;
-}
-
-#navigationbar, #navigationbar .curtab, #navigationbar .notab {
-    border-top: 1px solid black;
 }
 
 #navigationbar .notab, #navigationbar .curtab {
@@ -67,16 +40,13 @@ body {
     font-size: 0px;
     /* space between tabs in the navigation bar */
     width: 10px;
-    border: 0px solid red;
+    //border: 0px solid red;
 }
 
-#navigationbar .notab {
-    border: 1px solid transparent;
-    border-bottom: 1px solid #141414;
-}
 
 #navigationbar .curtab {
-    border: 1px solid white;
+    border: 1px solid #176800;
+    background-color: #176800;
     border-bottom: 0px solid transparent;
 }
 
@@ -87,11 +57,11 @@ body {
 }
 
 #navigationbar .notab a {
-    color: #9fbc00;
+    color: black;
 }
 
 #navigationbar .curtab a {
-    color: #101010;
+    color: #efefef;
 }
 
 
@@ -163,6 +133,7 @@ h1 {
 #subheader {
     text-align: left;
     font-size: 0.6em;
+    color: black;
 }
 
 h2 {
@@ -333,25 +304,37 @@ table thead th {
     margin-bottom: 0em;
 }
 
+.tabbarseparator, .subpagebar {
+    background-color: #176800;
+}
+
+.tabbarseparator {
+    min-height: 4px;
+}
+
 .subpagebar {
-    padding: 0.4em;
+    padding: 0.2em;
+    padding-left: 0.4em;
+    padding-right: 0.4em;
 }
 
 .subpagebar .subpage {
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding: 0.2em;
+    padding-left: 0.8em;
+    padding-right: 0.8em;
 }
 
 .subpagebar .subpage a {
-    color: #6f9c00;
+    color: white;
     font-weight: bold;
 }
 
 .subpagebar .subpagecur a {
     color: black;
+    display: inline-block;
 }
 
 .subpagebar .subpagecur {
-    background-color: grey;
+    background-color: white;
 }
 
